--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+server.port=${PORT:8080}
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/news
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:sql11.freesqldatabase.com}:3306/sql11437318
+spring.datasource.username=sql11437318
+spring.datasource.password=U3fv9e6tTZ
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
